changed logout route

--- a/apps/ExamApp/templates/ExamApp/add_trip.html
+++ b/apps/ExamApp/templates/ExamApp/add_trip.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <header>
-    <p><a href="{% url 'logreg:index' %}">Logout</a></p>    
+    <p><a href="{% url 'logreg:logout' %}">Logout</a></p>    
     <p><a href="{% url 'examapp:index' %}">Home</a></p>
 </header>
 <h2>Add New Trip</h2>
