--- a/apps/ExamApp/templates/ExamApp/index.html
+++ b/apps/ExamApp/templates/ExamApp/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <header>
-    <p><a href="{% url 'logreg:index' %}">Logout</a></p>
+    <p><a href="{% url 'logreg:logout' %}">Logout</a></p>
     <p><a href="{% url 'examapp:add_trip' %}">Add Travel Plan</a></p>    
 </header>
 
