--- a/apps/LogReg/templates/LogReg/base.html
+++ b/apps/LogReg/templates/LogReg/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title></title>
-        <description></description>
+        <title>Travel Buddy</title>
+        <description>travel planning site</description>
         <meta charset='utf-8'>
         {% load staticfiles %}
         <link rel = 'stylesheet' href="{% static 'css/bootstrap.min.css' %}" type='text/css'/>
