--- a/apps/ExamApp/templates/ExamApp/add_trip.html
+++ b/apps/ExamApp/templates/ExamApp/add_trip.html
@@ -5,7 +5,7 @@
     <p><a href="{% url 'logreg:logout' %}">Logout</a></p>    
     <p><a href="{% url 'examapp:index' %}">Home</a></p>
 </header>
-<h2>Add New Trip!!!</h2>
+<h2>Add New Trip</h2>
 {% if messages %}
     <ul>
     {% for message in messages %}
