--- a/apps/LogReg/templates/LogReg/base.html
+++ b/apps/LogReg/templates/LogReg/base.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     <head>
         <title>Travel Buddy</title>
-        <description>travel planning site</description>
+        <description></description>
         <meta charset='utf-8'>
         {% load staticfiles %}
         <link rel = 'stylesheet' href="{% static 'css/bootstrap.min.css' %}" type='text/css'/>
